0.8.0
    replaced udisks with libudev kernel support for device detection and info
    udisks v1 & v2 now supported for mount/unmount as normal user
    added device Settings|Un/Mount Command options to customize mount program
0.7.4   2012-04-01:
    added git build instructions to README
    better standards compliance for data doc dirs fixes #8
    no del on move error independent of error control fixes #9
0.7.3   2012-03-29:
    new icons and logo by Goran Simovic plus alternates
    added context sensitive help on design menu
    changed/added design mode key and mouse shortcuts
    renamed Smartbar to Path Bar
    renamed View|Toolbox to View|Toolbar
    when copy context, copy plugin skin context
    equate display :0.0 & :0 fixes #5
    changed debug info for sf ticket 88000
    fixed panel bar always shown on cancel fullscreen
    no folder size display; right-align size column
    moved refresh to after home/default on left toolbar
    fixed issues affecting opensuse build 
    added support for xdg-su and gnomesu
    corrected problem copying plugins
    fixed segfault on toolbar config menu?
    changed default drag action to copy (hold shift or ctrl+shift to override)
0.7.2   2012-03-05:
    exec function redesign (single script, noexec /tmp ok, ktsuss2 support,
        added /usr/bin/spacefm-auth)
    submitted ktsuss2 bug reports
    additional and updated language strings including shell prompts
    copy menu item now copies context
    can now create MBR and FSArchiver backups of mounted volumes
    changed 20x20 icon sizes to 22x22 to prevent blur from scaling
    apply prefs small icon size to devices, bookmarks, dirtree icons
    tab icons default to 16x16 if available in gtk icon theme
    fixed segfault on open multiple files in File Search window results
    completed open selected dir in File Search window results
    corrected folder selection history skipping empty selection
    user's manual updated to reflect changes, minor corrections