@@ -2,6 +2,7 @@
     replaced udisks with libudev kernel support for device detection and info
     udisks v1 & v2 now supported for mount/unmount as normal user
     added device Settings|Un/Mount Command options to customize mount program
+    corrected race condition create tmp dir
 0.7.4   2012-04-01:
     added git build instructions to README
     better standards compliance for data doc dirs fixes #8
